# text_prediction_api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: handlers.rs  main.rs  utils.rs
src/controllers/: bigrams.rs  examples.rs  greetings.rs  layouts.rs  mod.rs
src/models/: bigrams.rs  greetings.rs  layouts.rs  mod.rs  pagination.rs
src/repositories/: bigrams.rs  greetings.rs  layouts.rs  mod.rs
