[package]
name = "text_prediction_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bson = "2.6.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
mongodb = { version = "2.5.0", default-features = false, features = ["async-std-runtime"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
